# congenial-waffle

./: .gitignore  CMakeLists.txt  ConfigInfo.cpp  ConfigInfo.h  ConfigInstance.cpp  ConfigInstance.h  ConfigManager.cpp  ConfigManager.h  Makefile  test_manager.xml
.claude/: settings.local.json
test/: config_test.cpp
xmlsetting/: XmlSettings.cpp  XmlSettings.h
